Fix: Add API Gateway, NRIC masking, inter-service communication
- Add api-gateway module with WebFlux routing to all services
- Fix AccountResponse to mask NRIC (never expose full NRIC)
- Add WebClient dependency to transaction-service for Account Service calls
- Update TransactionService to validate balance before transfer
- Add description field to TransferRequest
- Update docker-compose.yml with api-gateway and shared MySQL
- Update README with new architecture and security notes